light and dark themes options

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,8 +22,8 @@ website:
 format:
   html:
     theme:
-      - cyborg
-      - brand
+      dark: darkly
+      light: flatly
     css: styles.css
     toc: true
 
